cmake_minimum_required(VERSION 3.7)
project(Vr)
set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES src/main.cpp)
find_package(CGAL REQUIRED COMPONENTS Core)
include( ${CGAL_USE_FILE} )
include( CGAL_CreateSingleSourceCGALProgram )
add_executable(Vr ${SOURCE_FILES})
target_link_libraries(Vr ${CGAL_LIBRARIES} ${CGAL_3RD_PARTY_LIBRARIES})
